@@ -152,11 +152,10 @@ sub notebook {
 	return $self->{notebook};
 }
 
-# Get the project from the main window (and don't cache).
-# If we are in startup phase and there IS no main window
-# try to fall back to the underlying IDE object.
+# Get the current configuration from the main window (and don't cache).
 sub config {
 	my $self = ref( $_[0] ) ? $_[0] : $_[0]->new;
+
 	if ( defined $self->main ) {
 		return $self->main->config;
 	} elsif ( $self->ide ) {
